separando as resposabilidade e criando validação global